--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "talent-form-backend",
   "version": "1.0.0",
   "scripts": {
+    "dev": "nest start --watch",
     "start:prod": "node dist/main",
     "build": "nest build",
     "test": "jest"
@@ -17,6 +18,8 @@
     "@nestjs/swagger": "^7.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.0.0",
     "typeorm": "^0.3.0"
