--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,10 @@ services:
       KC_DB_URL: jdbc:postgresql://postgres:5432/talent_form
       KC_DB_USERNAME: talent_user
       KC_DB_PASSWORD: talent_pass
+      # SMTP-настройки для MailDev
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_STRICT: "false"
+      KC_HOSTNAME_STRICT_HTTPS: "false"
     command:
       - start-dev
       - --import-realm
@@ -31,6 +35,7 @@ services:
       - "8080:8080"
     depends_on:
       - postgres
+      - maildev
 
   backend:
     build:
@@ -40,6 +45,11 @@ services:
       DATABASE_URL: postgresql://talent_user:talent_pass@postgres:5432/talent_form
       KEYCLOAK_URL: http://keycloak:8080
       PORT: 3000
+      # Настройки для MailDev (SMTP)
+      SMTP_HOST: maildev
+      SMTP_PORT: 1025
+      SMTP_SECURE: "false"
+      EMAIL_FROM: no-reply@example.com
     ports:
       - "3000:3000"
     depends_on:
@@ -59,6 +69,16 @@ services:
       VITE_KEYCLOAK_CLIENT_ID: talent-client
     depends_on:
       - backend
+
+  maildev:
+    image: maildev/maildev
+    ports:
+      - "1025:1025"  # SMTP-порт для отправки писем
+      - "1080:1080"  # Веб-интерфейс для просмотра писем
+    environment:
+      MAILDEV_INCOMING_USER: maildev
+      MAILDEV_INCOMING_PASS: maildev
+    restart: unless-stopped
 
 volumes:
   postgres_data:
