--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,15 @@
-FROM node:18
+FROM node:20-alpine
+
 WORKDIR /app
+
 COPY package*.json ./
+
 RUN npm install
+
 COPY . .
+
 RUN npm run build
-EXPOSE 5173
+
+EXPOSE 3030
+
 CMD ["npm", "run", "preview"]
