--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "talent-form-frontend",
-  "version": "1.0.0",
+  "name": "frontend",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "jest"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.0.0",
-    "axios": "^1.0.0",
-    "keycloak-js": "^22.0.1",
-    "mobx": "^6.0.0",
-    "mobx-react-lite": "^3.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.0.0"
+    "@ant-design/icons": "^5.3.1",
+    "antd": "^5.15.1",
+    "axios": "^1.6.7",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^22.15.3",
-    "@vitejs/plugin-react": "^4.0.0",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.0.0",
-    "typescript": "^5.0.0",
-    "vite": "^4.0.0"
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4"
   }
 }
